# 2025_20703028

./: README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt
.github/workflows/: doxygen-deploy.yml
worksheet2/: .gitignore  README.md  hi_and_date.cmd
worksheet4/Calc/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
worksheet4/Calc/dynamic/: maths.exp
worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
worksheet5/: .gitignore  CMakeLists.txt  README.md  adder.h
worksheet5/latex/: adder_8h.tex  adder_8h_source.tex  refman.tex
worksheet6/worksheet6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
worksheet7/Exercise1/: CMakeLists.txt
worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h
